# Detecmoda

./: ML_oda_Africana.ipynb  README.md
detectar_moda/: pyproject.toml  try_module.py
detectar_moda/detectar_moda/: __init__.py  control.py
detectar_moda/mlruns/0/: meta.yaml
detectar_moda/mlruns/0/72f635c3b28e4f82ac990c6255f498b2/: meta.yaml
detectar_moda/mlruns/0/72f635c3b28e4f82ac990c6255f498b2/artifacts/modelo_moda/: MLmodel  conda.yaml  requirements.txt
detectar_moda/mlruns/0/72f635c3b28e4f82ac990c6255f498b2/metrics/: final_accuracy  final_val_accuracy
detectar_moda/mlruns/0/72f635c3b28e4f82ac990c6255f498b2/tags/: mlflow.log-model.history  mlflow.runName  mlflow.source.git.commit  mlflow.source.name
detectar_moda/mlruns/models/modelo_teste/: meta.yaml
