[tool.poetry]
name = "detectar-moda"
version = "0.1.0"
description = ""
authors = ["antenoraires <antenoraires37@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
matplotlib = "^3.9.3"
opencv-python = "^4.10.0.84"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
